--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,6 +10,7 @@
         &-grp {
             display: flex;
             flex-direction: column;
+            text-align: left;
             background: #ffffff21;
             padding: 10px 80px 10px 10px;
             border-radius: 0 80px 80px 0;
