fix: serving size recommendation updates

--- a/src/components/FoodGroupCard/FoodGroupCard.scss
+++ b/src/components/FoodGroupCard/FoodGroupCard.scss
@@ -44,6 +44,7 @@
         padding: 3px 10px;
         border-radius: 10px;
         position: relative;
+        align-items: center;
 
         & .serving-size-label {
             font-size: .8rem;
