--- a/src/components/FoodSamples/FoodSamples.scss
+++ b/src/components/FoodSamples/FoodSamples.scss
@@ -5,6 +5,7 @@
     background: white;
     padding: 20px;
     border-radius: 0 30px 30px 0;
+    flex: 1 1 auto;
 
     &-title {
         display: flex;
